2002-06-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c (nautilus_icon_canvas_item_bounds):
	Fix bounds so we don't leave trails from the selected text rect.

2002-06-28  Alexander Larsson  <alexl@redhat.com>

	* icons/gnome/throbber/Makefile.am: 
	* icons/gnome/throbber/001-006.png: 
	* icons/gnome/gnome.xml:
	New throbber for gnome theme.
	Drawn by Ben FrantzDale <bfrantzdale@hmc.edu>

2002-06-28  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-directory.c
	(nautilus_directory_file_list_length_reached): use the
	key here.

	* libnautilus-private/apps_nautilus_preferences.schemas:
	add directory_limit, so it's not a hard coded '4000'.

2002-06-28  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* icons/default/default.xml:
	Fix url, since it is a redirection and nautilus-gtkhtml
	doesn't support that.

2002-06-28  Alexander Larsson  <alexl@redhat.com>
	
	* libnautilus-private/apps_nautilus_preferences.schemas
	* libnautilus-private/nautilus-global-preferences.c
	* libnautilus-private/nautilus-global-preferences.h
	* libnautilus-private/nautilus-program-choosing.c
	Removed xalf preferences and all remaining code references 
	to xalf since we no longer support xalf in nautilus. 

	* src/nautilus-window-menus.c
	Removed unused define for old help.

	Patch from David Bordoley <bordoley@msu.edu>

2002-06-28  Alexander Larsson  <alexl@redhat.com>

	* icons/default/Makefile.am (icon_DATA):
	* icons/default/trash-empty-192.png:
	* icons/default/trash-full-192.png:
	Added new 192 pixel versions of trash icon.
	Drawn by Ben FrantzDale <bfrantzdale@hmc.edu>

2002-06-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-volume-monitor.c:
	Don't eject when things are unmounted.
	Eject when we're explicitly unmounting a volume.
	
	* libnautilus-private/nautilus-volume-monitor.h:
	Add should_eject to nautilus_volume_monitor_mount_unmount_removable.
	
	* src/file-manager/fm-desktop-icon-view.c: