@@ -129,7 +129,7 @@ nautilus_bookmarks_window_response_callback (GtkDialog *dialog,
 							     GTK_DIALOG_DESTROY_WITH_PARENT,
 							     GTK_MESSAGE_ERROR,
 							     GTK_BUTTONS_CLOSE,
-							     _("There was an error displaying help: %s"),
+							     _("There was an error displaying help: \n%s"),
 							     error->message);
 
 			g_signal_connect (G_OBJECT (err_dialog),
