@@ -1,3 +1,10 @@
+2002-06-28  Christian Rose  <menthos@menthos.com>
+
+	* src/nautilus-bookmarks-window.c,
+	src/nautilus-preferences-dialog.c,
+	src/nautilus-property-browser.c: Added line break to help error
+	message.
+
 2002-06-28  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c (nautilus_icon_canvas_item_bounds):
